--- a/apps/cart/package.json
+++ b/apps/cart/package.json
@@ -1,31 +1,26 @@
 {
-  "name": "web",
+  "name": "cart",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/ui": "*",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@module-federation/nextjs-mf": "^8.3.19",
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@module-federation/nextjs-mf": "6.5.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "14.2.4",
     "typescript": "^5",
-    "webpack": "^5.91.0"
+    "webpack": "^5.92.0"
   }
 }
