--- a/apps/home/package.json
+++ b/apps/home/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.5",
+    "apollo-link-rest": "^0.9.0",
+    "graphql": "^16.8.2",
     "next": "14.2.4",
+    "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18"
   },
